2008-02-21  Kenichi Handa  <handa@ni.aist.go.jp>

	* quail/indian.el: Don't require devan-util.

2008-02-01  James Cloos  <cloos@jhcloos.com>

	* quail/arabic.el: Update (sync with xkeyboard-config keyboard).

2008-02-01  Kenichi Handa  <handa@m17n.org>

	* Makefile.in (OTHERS): Add arabic.elc.

2008-02-01  James Cloos  <cloos@jhcloos.com>

	* quail/arabic.el: New file.

2008-02-01  Kenichi Handa  <handa@m17n.org>

	* MISC-DIC/pinyin.map: Fix encoding to that of the original file.

2008-02-01  KAWABATA, Taichi  <kawabata@m17n.org>

	* quail/indian.el (quail-indian-flatten-list): Delete it.
	(quail-define-inscript-package): Pay attention to `nil' values of
	char/key-table.
	(inscript-tml-keytable): New variable.  Use it for Tamil inscript.

2008-02-01  Dave Love  <fx@gnu.org>

	* quail/latin-post.el ("turkish-latin-3-postfix"): Make it
	just an alias for turkish-postfix.

	* quail/latin-alt.el ("turkish-latin-3-alt-postfix"): Make it
	just an alias for turkish-alt-postfix.

	* quail/cyrillic.el (ukrainian-computer): Fix duplicate `\'.

2008-02-01  Kenichi Handa  <handa@m17n.org>

	* quail/thai.el: Don't require thai-util.
	(quail-thai-update-translation): Delete function.
	(thai-generate-quail-map): Change to a macro that directly calls
	quail-define-rules.
	("thai-kesmanee", "thai-pattachote"): Don't use
	UPDATE-TRANSLATION-FUNCTION.

	* quail/indian.el (quail-indian-preceding-char-position): Delete
	function.
	(quail-indian-update-preceding-char): Delete variable.
	(quail-indian-update-translation): Delete function.
	(quail-define-indian-trans-package): Don't call
	quail-define-package with quail-indian-update-translation.
	(quail-define-inscript-package): Likewise.

2008-02-01  Dave Love  <fx@gnu.org>

	* quail/indian.el (quail-indian-preceding-char-position)
	(quail-indian-update-translation, quail-define-inscript-package):
	Use characterp, not char-valid-p.

2008-02-01  Dave Love  <fx@gnu.org>

	* quail/welsh.el ("welsh"): Doc fix.
